# PoopyPooOS

./: .gitmodules  Cargo.toml  package.tl  shell.nix
.cargo/: config.toml
src/: main.rs
src/builder/: main.rs
