[package]
name = "os-workspace"
version = "0.0.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "userspace/*",
  "userspace/coreutils/coreutils-macro",

  "userspace/prelude/prelude-macro",
]
exclude = ["patches/nushell", "patches/thiserror"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Serializing
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-inline-default = "0.2.3"
toml = "0.8.20"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

# Network APIs
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "charset",
  "http2",
] }
url = "2.5.4"

# OS APIs
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
nix = { version = "0.29.0", default-features = false }
backtrace = "0.3"
fs_extra = "1.3"
rustix = "1"

# CLI APIs
clap = { version = "4.5", features = ["derive"] }
terminal_size = "0.4"
crossterm = "0.28"
rpassword = "7.3"
colored = "3"

# Encryption
rand_core = { version = "0.6.4", features = ["getrandom"] }
argon2 = "0.5.3"
glob = "0.3"

# Custom libraries
prelude-macro.path = "userspace/prelude/prelude-macro"
prelude.path = "userspace/prelude"
logger.path = "userspace/logger"
ipc.path = "userspace/ipc"
tl.path = "userspace/tl"

# IPC Wrappers
serviced.path = "userspace/serviced"
userd.path = "userspace/userd"

# Patched crates
thiserror.path = "patches/thiserror"

# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
nu-embed = { path = "./patches/nushell/crates/nu-embed" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "warn"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

no_effect_underscore_binding = "allow"
return_self_not_must_use = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
must_use_candidate = "allow"
unnecessary_wraps = "allow"
too_many_lines = "allow"
similar_names = "allow"
manual_assert = "allow"
unused_self = "allow"

[profile.dev.package."*"]
opt-level = "s"

[profile.release.package."*"]
opt-level = "s"
strip = true
